# ocaml-archimedes

./: .bzrignore  .gitignore  INSTALL.md  INSTALL.txt  Makefile  Makefile.conf  Makefile.in  Makefile.ocaml.in  README.md  README.txt  TODO  TODO.org  _oasis  _tags  archimedes.opam  configure.ac  myocamlbuild.ml  setup.ml
examples/: Makefile  anscombe.ml  coordinate_pairs.ml  coords_report.ml  files_pie.ml  incremental_drawing.ml  multi_hue.ml  pkg_chart.ml  pythagoras_tree.ml  scatter_hist.ml  simple.ml  spiral.ml  taylor.ml  three_graphs.ml
src/: META  META.in  Makefile.in  archimedes.ml  archimedes.mli  archimedes_cairo.dep.ab  archimedes_cairo.dep.in  archimedes_cairo.ml  archimedes_files  archimedes_footer.mli  archimedes_graphics.dep.ab  archimedes_graphics.dep.in  archimedes_graphics.ml  archimedes_header.mli.ab  archimedes_impl.mlpack  archimedes_internals.mlpack  archimedes_tikz.ml  archimedes_top.mli  archimedes_toploop.ml  arrows.ml  arrows.mli  arrows_public.mli  axes.ml  axes.mli  axes_public.mli  backend.ml  backend.mli  backend_public.mli  bmp.ml  bmp.mli  color.ml  color.mli  color_public.mli  conf.ml.ab  conf.ml.in  coord_handler.ml  coord_handler.mli  coordinate.ml  coordinate.mli  coordinate_public.mli  (+50 more)
tests/: Makefile  Makefile.in  arrays.ml  arrows1.ml  arrows2.ml  axes1.ml  axes_box.ml  axes_cross.ml  axes_dates.ml  axes_ortho.ml  axes_ylog.ml  backend_line.ml  backend_path.ml  backend_text.ml  boxes.ml  cairo_backend.ml  clip.ml  demo_zoom.ml  functions.ml  layout.ml  layout1.ml  layout2.ml  layout_borders.ml  layout_custom.ml  layout_grid.ml  layout_sync.ml  markers.ml  marks.ml  phase_plane.ml  piecharts.ml  plot_array.ml  plot_fill.ml  plot_functions.ml  plot_partial.ml  plot_sampler.ml  plot_sqrt.ml  plot_stack.ml  simple_plot.ml  test_arrows.ml  test_arrows2.ml  (+38 more)
unittests/: Makefile  coordinate.ml  unit_coordinate.ml
